BB-2688: Copilot PR Review Changes Added.